be/src/exec/data-sink.h
@@ -85,14 +85,13 @@ class DataSink {
     const TPlanFragmentInstanceCtx& fragment_instance_ctx,
     const RowDescriptor& row_desc, boost::scoped_ptr<DataSink>* sink);
 
-  /// Merges one update to the insert stats for a partition. dst_stats will have the
+  /// Merges one update to the DML stats for a partition. dst_stats will have the
   /// combined stats of src_stats and dst_stats after this method returns.
-  static void MergeInsertStats(const TInsertStats& src_stats,
+  static void MergeDmlStats(const TInsertStats& src_stats,
       TInsertStats* dst_stats);
 
-  /// Outputs the insert stats contained in the map of insert partition updates to a
-  /// string
-  static std::string OutputInsertStats(const PartitionStatusMap& stats,
+  /// Outputs the DML stats contained in the map of partition updates to a string
+  static std::string OutputDmlStats(const PartitionStatusMap& stats,
       const std::string& prefix = "");
 
   MemTracker* mem_tracker() const { return mem_tracker_; }
